syntax = "proto3";

import "google/protobuf/any.proto";
import "google/protobuf/field_mask.proto";

option go_package = "github.com/logbn/zongzi";

message cmd {
	Method method = 1;
    enum Method {
        METHOD_UNSPECIFIED = 0;
        METHOD_GET = 1;
        METHOD_PUT = 2;
        METHOD_PATCH = 3;
        METHOD_DELETE = 4;
    }
	Type type = 2;
    enum Type {
        TYPE_UNSPECIFIED = 0;
        TYPE_HOST = 1;
        TYPE_SHARD = 2;
        TYPE_REPLICA = 3;
        TYPE_SNAPSHOT = 4;
    }
    google.protobuf.FieldMask field_mask = 14;
    google.protobuf.Any data = 15;
}

message Host {
    uint64 id = 1;
    Status status = 2;
    enum Status {
        Status_UNSPECIFIED = 0;
        Status_NEW = 1;
        Status_ACTIVE = 2;
        Status_MISSING = 3;
        Status_RECOVERING = 4;
        Status_GONE = 5;
    }
    repeated string shard_types = 3;
    string api_address = 4;
    string raft_address = 5;
    bytes meta = 15;
}

message Shard {
    uint64 id = 1;
    Status status = 2;
    enum Status {
        Status_UNSPECIFIED = 0;
        Status_NEW = 1;
        Status_ACTIVE = 2;
        Status_CLOSED      = 3;
        Status_STARTING    = 4;
        Status_UNAVAILABLE = 5;
    }
    string type = 3;
    uint64 version = 4;
}

message Replica {
    uint64 id = 1;
    Status status = 2;
    enum Status {
        Status_UNSPECIFIED = 0;
        Status_NEW = 1;
        Status_ACTIVE = 2;
        Status_INACTIVE = 3;
        Status_DONE = 4;
    }
    uint64 shard_id = 3;
    bool is_non_voting = 4;
    bool is_witness = 5;
}

message Snapshot {
    uint64 index = 1;
    repeated Host hosts = 2;
    repeated Shard shards = 3;
    repeated Replica replicas = 4;
}
